samples/_failures_safe/1761645404_1c5267_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e347a077.c: In function ‘main’:
./samples/SAFE/__tmp_e347a077.c:150:5: error: expected expression at end of input
  150 |     while (1)
      |     ^~~~~
./samples/SAFE/__tmp_e347a077.c:150:5: error: expected declaration or statement at end of input
